# cotd-telegram-bot

./: .bazelrc  .gitignore  .profile  .python-version  Aptfile  BUILD  Procfile  README.md  WORKSPACE  heroku.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_devtools.txt  requirementsv2.txt
.github/: fly.yml  heroku.yml
.github/workflows/: build.yml  fly.yml  heroku.yml  main.yml
bot/: BUILD  config.py  flags.py  handlers.py  main.py  options.py
cotd/: BUILD  cacher.py  flags.py  handler.py  handlers.py  logger.py  main.py  options.py  poetry.toml  pyproject.toml  repository.py  service.py  static.py  storage.py  updater.py  utils.py
cotd-bot/: main.py
cotd/plugins/: BUILD  _BUILD  anti_voice.py  cringelord.py  cringer.py  cronjobs.py  cuno.py  helpers.py  inliner.py  kandinsky.py  manet.py  misc.py  motivationv2.py  prospector.py  security.py  webm_to_mp4.py  youtuber.py
cotd/prototypes/: BUILD  sticker-pack-creator.py
cotd_bot/: BUILD  builders.py  handlers.py  logger.py  main.py  updater.py  wsgi.py
hack/: BUILD  expander.sh  inspect_db.py
static/: BUILD
test/unit/: test_updater.py
tests/: BUILD  _BUILD
tests/integration/: BUILD  test_static_integration.py
tests/integration/v1/: BUILD
tests/unit/: BUILD  test_plugins_helpers_unit.py  test_static.py  test_static_unit.py  test_utils_unit.py
tests/unit/v1/: BUILD  test_plugins_helpers_unit.py
v1/: BUILD  pyproject.toml
v1/cotd/: BUILD  handlers.py  main.py  service.py  static.py  storage.py
v1/cotd/plugins/: BUILD  cringelord.py  cronjobs.py  inliner.py  kandinsky.py  misc.py  motivationv2.py  prospector.py  security.py  webm_to_mp4.py  youtuber.py
