#[mypy]
#mypy_path = "/tmp/_bazel/cotd-telegram-bot/output/external/python_runtime_deps/pypi__python_telegram_bot,/tmp/_bazel/cotd-telegram-bot/output/external/python_runtime_deps/pypi__pillow,/tmp/_bazel/cotd-telegram-bot/output/external/python_runtime_deps/pypi__ratelimit,/tmp/_bazel/cotd-telegram-bot/output/external/python_test_deps/pypi__pytest,/tmp/_bazel/cotd-telegram-bot/output/external/python_test_deps/pypi__pyfakefs,/tmp/_bazel/cotd-telegram-bot/output/external/python_test_deps/pypi__protobuf"
#
#["mypy-telegram.*"]
#ignore_missing_imports = True
#warn_return_any = True
#warn_unused_configs = True

[tool.poetry]
name = "cotd"
version = "1.0.0"
description = ""
authors = ["Literally Who <who@where.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-telegram-bot = "^13.11"
pillow = ">=8.3"
ratelimit = ">=2.2"
requests = ">=2.27"

[tool.poetry.dev-dependencies]
black=">=21.12b0"
pylint="*"
mypy="*"
pytest="*"
pyfakefs="*"