[tool.poetry]
name = "cotd"
version = "1.0.0"
description = ""
authors = ["Literally Who <who@where.io>"]

[tool.poetry.dependencies]
python = ">=3.10.3,<4.0"
python-telegram-bot = "^13.11"
pillow = ">=8.3"
ratelimit = ">=2.2"
requests = ">=2.27"

[tool.poetry.dev-dependencies]
black = "*"
ruff = "*"
pytest = "*"
pyfakefs = "*"

[tool.pyright]
